python/testData/inspections/InspectionsDisabledInFunctionTypeComments/test.py
<weak_warning descr="Missing docstring"></weak_warning><warning descr="No encoding specified for file"></warning>def <weak_warning descr="Missing docstring">f</weak_warning>(x):
    <warning descr="Non-ASCII character 'М' in the file, but no encoding declared"># type: (b'Моноцикл') -> None</warning>
    pass


def <weak_warning descr="Missing docstring">g</weak_warning>():
    # type: <error descr="Unexpected tokens">"foo"</error>
    pass
